[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["Felipe Cerqueira <felipecer06@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-rest-framework = "^0.1.0"
pytest-django = "^4.9.0"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
